feat: Revamp Settings Page with Sidebar Navigation and Resume Upload Functionality
- Implemented a sidebar navigation for easier access to different settings sections.
- Added theme toggle functionality with dark and light modes.
- Enhanced resume upload section with improved file validation and user feedback.
- Updated global styles to support theme transitions and improved layout.
- Refactored state management for user notifications and auto-apply settings.